--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   },
   "homepage": "https://github.com/zadoque1/saga#readme",
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "node-sass": "^7.0.0",
-    "sass": "^1.45.0"
+    "bootstrap": "^5.1.3"
   }
 }
